syntax = "proto3";
package types;
option go_package = "github.com/cloudogu/cesappd/generated/types";

message BasicRequest {

}